--- a/values-schema.yaml
+++ b/values-schema.yaml
@@ -3050,6 +3050,11 @@ properties:
                   - deployment
                   - daemonset
                   - statefulset
+              attributes:
+                type: array
+                title: Kubernetes Attributes
+                $ref: '#/definitions/labelsAnnotations'
+                description: 'Attributes to extract metadata from pods'
           operator:
             properties:
               replicaCount:
@@ -3430,6 +3435,18 @@ properties:
                   - apiToken
             required:
               - civo
+          - title: Linode
+            additionalProperties: false
+            properties:
+              linode:
+                properties:
+                  apiKey:
+                    type: string
+                    x-secret: ''
+                required:
+                  - apiToken
+            required:
+              - linode
           - title: CloudFlare
             additionalProperties: false
             properties:
