--- a/charts/adhar-api/values.yaml
+++ b/charts/adhar-api/values.yaml
@@ -30,13 +30,13 @@ rbac:
   create: true
 
 podSecurityContext: {}
-  # fsGroup: 2000
+# fsGroup: 2000
 
 securityContext:
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
+# capabilities:
+#   drop:
+#   - ALL
+# readOnlyRootFilesystem: true
 
 service:
   type: ClusterIP
@@ -45,11 +45,11 @@ service:
 ingress:
   enabled: false
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  # kubernetes.io/ingress.class: nginx
+  # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
-      paths: []
+  - host: chart-example.local
+    paths: []
 
   tls: []
   #  - secretName: chart-example-tls
@@ -57,16 +57,16 @@ ingress:
   #      - chart-example.local
 
 resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+# We usually recommend not to specify default resources and to leave this as a conscious
+# choice for the user. This also increases chances charts run on environments with little
+# resources, such as Minikube. If you do want to specify resources, uncomment the following
+# lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+# limits:
+#   cpu: 100m
+#   memory: 128Mi
+# requests:
+#   cpu: 100m
+#   memory: 128Mi
 
 podAnnotations: {}
 
@@ -75,18 +75,18 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
-  # podAffinity:
-  #   requiredDuringSchedulingIgnoredDuringExecution:
-  #     - labelSelector:
-  #         matchExpressions:
-  #           - key: affinity.otomi.io
-  #             operator: In
-  #             values:
-  #               - "core"
-  #       topologyKey: kubernetes.io/hostname
+# podAffinity:
+#   requiredDuringSchedulingIgnoredDuringExecution:
+#     - labelSelector:
+#         matchExpressions:
+#           - key: affinity.otomi.io
+#             operator: In
+#             values:
+#               - "core"
+#       topologyKey: kubernetes.io/hostname
 
 secrets:
-  GIT_USER: 
+  GIT_USER:
   GIT_EMAIL:
   GIT_PASSWORD:
 
@@ -102,17 +102,17 @@ core: {}
 tools:
   image:
     registry: docker.io
-    repository: otomi/core
+    repository: adhario/adhar
     tag: latest
     pullPolicy: IfNotPresent
 
   resources: {}
-    # limits:
-    #   cpu: 500m
-    #   memory: 500Mi
-    # requests:
-    #   cpu: 100m
-    #   memory: 100Mi
+  # limits:
+  #   cpu: 500m
+  #   memory: 500Mi
+  # requests:
+  #   cpu: 100m
+  #   memory: 100Mi
 
   secrets:
     GCLOUD_SERVICE_KEY: ''
