--- a/versions.yaml
+++ b/versions.yaml
@@ -2,3 +2,8 @@ api: 2.6.0
 console: 2.5.0
 tasks: 2.4.0
 tools: 1.6.0
+otomi/api: 2.6.0
+otomi/console: 2.5.0
+otomi/tasks: 2.4.0
+otomi/tools: 1.6.0
+adhario/adhar: latest
