--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adhar",
-  "version": "0.1.33",
+  "version": "0.1.34",
   "type": "commonjs",
   "author": "Anitech Consulting Services Pvt Ltd",
   "description": "Adhar platform is an opinionated stack of Kubernetes apps and configurations to run a production-ready platform on Kubernetes.",
@@ -148,8 +148,8 @@
     "typescript": "4.7.4"
   },
   "engines": {
-    "npm": ">=8.0.0 <10.2.5",
-    "node": ">=16.0.0 <20.10.0"
+    "npm": ">=8.0.0 <=10.2.5",
+    "node": ">=16.0.0 <=20.10.0"
   },
   "lint-staged": {
     "*.{json,yml,yaml}": [
