--- a/charts/adhar-console/Chart.yaml
+++ b/charts/adhar-console/Chart.yaml
@@ -1,5 +1,6 @@
-apiVersion: v1
-appVersion: "1.0"
+apiVersion: v2
+appVersion: "0.1.0"
 description: Adhar Console Helm chart for Kubernetes
+icon: https://adhar.io/imgs/adhar-logo-black.svg
 name: adhar-console
 version: 0.1.0
