--- a/values-changes.yaml
+++ b/values-changes.yaml
@@ -124,3 +124,8 @@ changes:
       - 'apps.argocd.enabled'
   - version: 20
     networkPoliciesMigration: true
+    additions:
+      - 'teamConfig.{team}.managedMonitoring.private': true
+    deletions:
+      - 'apps.loki.storage.gcs.project'
+      - 'apps.loki.storage.gcs.instance'
