--- a/helmfile.d/helmfile-100.adhar.yaml
+++ b/helmfile.d/helmfile-100.adhar.yaml
@@ -13,7 +13,7 @@ bases:
 
 releases:
   - name: adhar-api
-    installed: true
+    installed: false
     namespace: otomi
     labels:
       pkg: otomi
