fix: policy violations in adhar-console

--- a/charts/adhar-console/templates/deployment.yaml
+++ b/charts/adhar-console/templates/deployment.yaml
@@ -33,6 +33,9 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 1000
           {{- with .Values.env }}
           env:
             {{- range $key, $value := . }}
