--- a/tools/Dockerfile
+++ b/tools/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1.6
-# The above is needed for the "--checksum" argument to work in the ADD instruction used below.
-FROM ubuntu:latest
+# The above is needed for the "--checksum" argument to work in the ADD instruction
+FROM ubuntu:20.04
 
 ARG DEBIAN_FRONTEND=noninteractive
 
@@ -126,7 +126,7 @@ RUN tar -zxvf /tmp/conftest_${CONFTEST_VERSION}_Linux_x86_64.tar.gz -C /tmp && m
 ADD https://github.com/plexsystems/konstraint/releases/download/v${KONSTRAINT_VERSION}/konstraint-linux-amd64 /tmp
 RUN mv /tmp/konstraint-linux-amd64 konstraint && chmod +x konstraint
 
-# nodejs
+# node
 # https://github.com/nodesource/distributions
 RUN set -uex && \
   mkdir -p /etc/apt/keyrings && \
