--- a/.values/env/teams.yaml
+++ b/.values/env/teams.yaml
@@ -5,6 +5,7 @@ teamConfig:
             alertmanager: true
             grafana: true
             prometheus: true
+        resourceQuota: {}
         selfService:
             access:
                 - shell
