--- a/platform/stack/adhar-console/manifests/serviceaccount.yaml
+++ b/platform/stack/adhar-console/manifests/serviceaccount.yaml
@@ -1,12 +1,6 @@
----
-# Source: adhar-console/templates/serviceaccount.yaml
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: adhar-console
+  name: adhar-console-sa
   labels:
     app.kubernetes.io/name: adhar-console
-    helm.sh/chart: adhar-console-0.1.0
-    app.kubernetes.io/instance: adhar-console
-    app.kubernetes.io/version: "0.1.0"
-    app.kubernetes.io/managed-by: Helm
