--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -2,7 +2,7 @@ name: nightly
 on:
   # This can be used to automatically publish nightlies at UTC nighttime
   schedule:
-    - cron: '0 7 * * *' # run at 7 AM UTC
+    - cron: '0 23 * * *' # run at 7 AM UTC
   # This can be used to allow manually triggering nightlies from the web interface
   workflow_dispatch:
 
@@ -14,8 +14,8 @@ jobs:
         id: generate-token
         uses: actions/create-github-app-token@v1
         with:
-          app-id: ${{ vars.CNOE_GH_WORKFLOW_TOKEN_APP_ID }}
-          private-key: ${{ secrets.CNOE_GH_WORKFLOW_TOKEN_PRIVATE_KEY }}
+          app-id: ${{ secrets.ADHAR_GH_WORKFLOW_TOKEN_APP_ID }}
+          private-key: ${{ secrets.ADHAR_GH_WORKFLOW_TOKEN_PRIVATE_KEY }}
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           token: ${{ steps.generate-token.outputs.token }}
