fix keycloak temporarily

--- a/platform/stack/packages/application/argo-workflows/templates/install.yaml
+++ b/platform/stack/packages/application/argo-workflows/templates/install.yaml
@@ -1271,7 +1271,7 @@ data:
         - email
         - groups
     nodeEvents:
-      enabled: false
+      # enabled: false
 kind: ConfigMap
 metadata:
   name: workflow-controller-configmap
