--- a/platform/stack/packages/application/backstage/templates/postgresql/external-secrets.yaml
+++ b/platform/stack/packages/application/backstage/templates/postgresql/external-secrets.yaml
@@ -31,7 +31,7 @@ spec:
         POSTGRES_PORT: '5432'
         POSTGRES_DB: backstage
         POSTGRES_USER: backstage
-        POSTGRES_PASSWORD: "{{.POSTGRES_PASSWORD}}"
+        POSTGRES_PASSWORD: password #"{{.POSTGRES_PASSWORD}}"
         ARGO_WORKFLOWS_URL: https://{{ .Values.networking.host }}:{{ .Values.networking.port }}/argo-workflows
         KEYCLOAK_NAME_METADATA: https://{{ .Values.networking.host }}:{{ .Values.networking.port }}/keycloak/realms/cnoe/.well-known/openid-configuration
         KEYCLOAK_CLIENT_SECRET: "{{.BACKSTAGE_CLIENT_SECRET}}"
