--- a/platform/stack/packages/security/keycloak/manifests/ingress.yaml
+++ b/platform/stack/packages/security/keycloak/manifests/ingress.yaml
@@ -18,7 +18,7 @@ spec:
                 name: keycloak
                 port:
                   name: http
-    - host: {{ .Values.networking.host }}
+    - host: adhar.localtest.me
       http:
         paths:
           - path: /keycloak
