--- a/platform/stack/packages/security/keycloak/manifests/install.yaml
+++ b/platform/stack/packages/security/keycloak/manifests/install.yaml
@@ -83,15 +83,13 @@ data:
     proxy=edge
     
     # hostname configuration
-    hostname={{ .Values.networking.host }}
-    {{- if not (eq (int .Values.networking.port) 443) }}
-    hostname-port={{ .Values.networking.port }}
+    hostname=adhar.localtest.me
+    hostname-port=8443
+    http-relative-path=keycloak
     
     # the admin url requires its own configuration to reflect correct url
-    hostname-admin={{ .Values.networking.host }}:{{ .Values.networking.port }}
-    {{- end }}
+    hostname-admin=adhar.localtest.me:8443
     
-    http-relative-path=keycloak
     hostname-debug=true
     
     # this should only be allowed in development. NEVER in production.
