--- a/platform/stack/packages/application/adhar-templates/app-with-bucket/template.yaml
+++ b/platform/stack/packages/application/adhar-templates/app-with-bucket/template.yaml
@@ -5,7 +5,7 @@ metadata:
   name: app-with-aws-resources
   title: Add a Go App with AWS resources
 spec:
-  owner: guest
+  owner: guests
   type: service
   parameters:
     - properties:
@@ -111,7 +111,7 @@ spec:
         argoInstance: in-cluster
         projectName: default
         # necessary until we generate our own cert
-        repoUrl: http://my-gitea-http.gitea.svc.cluster.local:3000/giteaAdmin/${{parameters.name}}
+        repoUrl: https://adhar.localtest.me:8443/gitea/giteaAdmin/${{parameters.name}}
         path: "kustomize/base"
     - id: register
       name: Register
