--- a/platform/stack/packages/application/adhar-templates/argo-workflows/skeleton/catalog-info.yaml
+++ b/platform/stack/packages/application/adhar-templates/argo-workflows/skeleton/catalog-info.yaml
@@ -1,24 +1,18 @@
-apiVersion: backstage.io/v1alpha1
-kind: Resource
-metadata:
-  name: ${{values.name}}-bucket
-  description: Stores things
-  annotations:
-    argocd/app-name: ${{values.name | dump}}
-spec:
-  type: s3-bucket
-  owner: guests
 ---
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: ${{values.name | dump}}
-  description: This is for testing purposes
+  description: This is an example Backstage component representing the use of Argo Workflows and Spark Operator.
   annotations:
     backstage.io/techdocs-ref: dir:.
     backstage.io/kubernetes-label-selector: 'entity-id=${{values.name}}'
-    backstage.io/kubernetes-namespace: default
+    backstage.io/kubernetes-namespace: argo
     argocd/app-name: ${{values.name | dump}}
+    argo-workflows.cnoe.io/label-selector: env=dev,entity-id=${{values.name}}
+    argo-workflows.cnoe.io/cluster-name: local
+    apache-spark.cnoe.io/label-selector: env=dev,entity-id=${{values.name}}
+    apache-spark.cnoe.io/cluster-name: local
   links:
     - url: https://adhar.localtest.me:8443/gitea
       title: Repo URL
@@ -28,8 +22,6 @@ spec:
   lifecycle: experimental
   type: service
   system: ${{values.name | dump}}
-  dependsOn:
-    - resource:default/${{values.name}}-bucket
 ---
 apiVersion: backstage.io/v1alpha1
 kind: System
