--- a/platform/stack/packages/security/keycloak/manifests/keycloak-config.yaml
+++ b/platform/stack/packages/security/keycloak/manifests/keycloak-config.yaml
@@ -90,7 +90,7 @@ data:
         }
     }
   realm-payload.json: |
-    {"realm":"cnoe","enabled":true}
+    {"realm":"adhar","enabled":true}
   user-password.json: |
     {
         "temporary": false,
